# SIGA

./: .env.example  .env.production.example  .env.staging.example  .gitignore  ARQUITECTURA_MIXINS.md  ARQUITECTURA_ORGANIZACIONES.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  financiero_produccion.patch  reglas_recibos_paypal.patch
backend/: .dockerignore  ANALISIS_IMPORTACION.md  ARQUITECTURA.md  DECISIONES_MAPEO_CONFIRMADAS.md  Dockerfile  MAPEO_CAMPOS_DETALLADO.md  RESUMEN_EJECUTIVO_IMPORTACION.md  SQL_PENDIENTE.md  count_cuotas_by_agrup.py  drop_alembic_table.py  export_schema.py  main.py  pyproject.toml  reset_db.py  schema.graphql  schema_debug.txt  schema_summary.md  tree.txt
backend/alembic/: env.py
backend/alembic/versions/: 019f010cd755_migracion_inicial_ddd.py  031b5617936a_rename_tipos_agrupacion_to_niveles_.py  04ede766081e_add_all_domain_models_ddd_architecture_.py  0b338d94c1f5_add_admin_domain_rbac_and_audit_log.py  32a0dc295063_update_models_add_profesion_nivel_.py  564207c255eb_add_campania_fk_to_actividades.py  5c2912c2f427_remove_acciones_campania_table.py  705751a664c9_cargos_roles_nombramiento_usuariorol.py  8c6072307fac_add_server_defaults_to_base_model_fields.py  9096dc619f8c_add_pais_nacimiento_id_to_miembros.py  a1b2c3d4e5f6_add_junta_directiva_models.py  a1b2c3d4e5f6_rediseno_actividades.py  a2b3c4d5e6f7_add_eventos_domain.py  a2b3c4d5e6f7_add_militancia_tables.py  a2b3c4d5e6f7_entidades_geograficas.py  (+94 more)
backend/initial_data/: roles.json  transacciones.json  usuario_admin.json
(+919 files in other folders)
